main/default/objects/Contact/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <inlineHelpText>This can be used to store wedding anniversary, an anniversary of doing business together, or any other annually noteworthy date.</inlineHelpText>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>