main/default/objects/Contact/fields/Availability_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Availability_Time_Zone__c</fullName>
    <label>Availability Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone</valueSetName>
    </valueSet>
</CustomField>