main/default/objects/Contact/fields/Change_Cloud_Program__c.field-meta.xml
<CustomField>
    <fullName>Change_Cloud_Program__c</fullName>
    <inlineHelpText>Please select the Change Cloud Program to which you will enroll the contact. Change Cloud will then enroll the participant and allow you to select specific journeys for the individual.</inlineHelpText>
    <label>Change Cloud Program</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Cloud_Program</valueSetName>
    </valueSet>
</CustomField>