main/default/objects/Contact/fields/Connect_User__c.field-meta.xml
<CustomField>
    <fullName>Connect_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect User</label>
    <type>Checkbox</type>
</CustomField>