main/default/objects/Contact/fields/Contact_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Rate__c</fullName>
    <label>Contact Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>