main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <inlineHelpText>Please select the most appropriate type of Contact.  For employees, please input information in the employee relevant information per policy.</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee - FT</fullName>
            </value>
            <value>
                <fullName>Employee- PT</fullName>
            </value>
            <value>
                <fullName>Employee- 1099</fullName>
            </value>
            <value>
                <fullName>Contractor (employed by another firm)</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>