main/default/objects/Contact/fields/Employee_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Number__c</fullName>
    <description>Employee Identification Number from Sage Intacct</description>
    <inlineHelpText>Employee Identification Number from Sage Intacct</inlineHelpText>
    <label>Employee ID Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>