main/default/objects/Contact/fields/Expertise_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Specialty__c</fullName>
    <label>Expertise/Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>