main/default/objects/Contact/fields/FLSA_Poster__c.field-meta.xml
<CustomField>
    <fullName>FLSA_Poster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLSA Poster</label>
    <type>Checkbox</type>
</CustomField>