main/default/objects/Contact/fields/INPT_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>INPT_Contact_Type__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ federal or state&amp;local contact type.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ federal or state&amp;local contact type.</inlineHelpText>
    <label>IQ Contact Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>