main/default/objects/Contact/fields/INPT_ContactId__c.field-meta.xml
<CustomField>
    <fullName>INPT_ContactId__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ ID of the contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ ID of the contact.</inlineHelpText>
    <label>IQ Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>