main/default/objects/Contact/fields/INPT_Government_Level_1__c.field-meta.xml
<CustomField>
    <fullName>INPT_Government_Level_1__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ level 1 government entity assigned. This is a department if the government is federal and a state if the government is state&amp;local.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ level 1 government entity assigned. This is a department if the government is federal and a state if the government is state&amp;local.</inlineHelpText>
    <label>IQ Government Level 1</label>
    <length>140</length>
    <type>Text</type>
</CustomField>