main/default/objects/Contact/fields/Key_Labs__c.field-meta.xml
<CustomField>
    <fullName>Key_Labs__c</fullName>
    <label>Key Labs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>