main/default/objects/Contact/fields/Login_Token__c.field-meta.xml
<CustomField>
    <fullName>Login_Token__c</fullName>
    <label>Login Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>