main/default/objects/Contact/fields/Medications__c.field-meta.xml
<CustomField>
    <fullName>Medications__c</fullName>
    <label>Medications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>