main/default/objects/Contact/fields/Navigator__c.field-meta.xml
<CustomField>
    <fullName>Navigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basecamp</label>
    <referenceTo>Navigator__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>