main/default/objects/Contact/fields/Navigator_Login_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Login_Page_URL__c</fullName>
    <label>Basecamp Login Page URL</label>
    <type>Url</type>
</CustomField>