main/default/objects/Contact/fields/Navigator_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Page_URL__c</fullName>
    <label>Basecamp Page URL</label>
    <type>Url</type>
</CustomField>