main/default/objects/Contact/fields/Onboarding_Process_Select_to_Initiate__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Process_Select_to_Initiate__c</fullName>
    <description>Field to be selected by HR or Finance User in order to start the onboarding process.</description>
    <inlineHelpText>Select the appropriate option to initiate the onboarding process for the employee or contractor employee.  This is required to ensure that we set up network access and communicate compliance to them.</inlineHelpText>
    <label>Onboarding Process (Select to Initiate)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee-  W2 Full TIme</fullName>
            </value>
            <value>
                <fullName>Employee-  W2 Part Time</fullName>
            </value>
            <value>
                <fullName>Employee-  1099</fullName>
            </value>
            <value>
                <fullName>Contactor-  Contractor Employee Working on Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>