main/default/objects/Contact/fields/Organization_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Organization_Time_Zone__c</fullName>
    <formula>$Label.Organization_Timezone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Time Zone</label>
    <type>Text</type>
</CustomField>