main/default/objects/Contact/fields/Past_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Past_Medical_History__c</fullName>
    <label>Past Medical History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>