main/default/objects/Contact/fields/Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Profile_Description__c</fullName>
    <label>Profile Description</label>
    <length>121072</length>
    <type>Html</type>
</CustomField>