main/default/objects/Contact/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <label>Profile Picture URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>