main/default/objects/Contact/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Referred by)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>