main/default/objects/Contact/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>