main/default/objects/Contact/fields/Send_Anniversary_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Anniversary_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is part of the Birthday Emailer AppExchange package.</description>
    <inlineHelpText>Check this field if you wish to send an anniversary email to this contact, using the Anniversary Email email template.</inlineHelpText>
    <label>Send Anniversary Email</label>
    <type>Checkbox</type>
</CustomField>