main/default/objects/Contact/fields/Send_Birthday_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Birthday_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is related to the Birthday Emailer AppExchange package</description>
    <inlineHelpText>Check this field to enable an automated birthday email to be sent to this contact, using the &quot;Birthday Email&quot; email template.</inlineHelpText>
    <label>Send Birthday Email</label>
    <type>Checkbox</type>
</CustomField>