main/default/objects/Contact/fields/Social_History__c.field-meta.xml
<CustomField>
    <fullName>Social_History__c</fullName>
    <label>Social History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>