main/default/objects/Contact/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <description>Social Security Number</description>
    <inlineHelpText>Social Security number should only be entered for W2 employees which would allow us to manage their benefits more effectively.</inlineHelpText>
    <label>Social Security Number</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>