main/default/objects/Contact/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Specialties</valueSetName>
    </valueSet>
</CustomField>