main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Educator</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Trainor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>