main/default/objects/Contact/listViews/MHS_GENESIS_HOOD_BRAGG_PEF_Journey.listView-meta.xml
<ListView>
    <fullName>MHS_GENESIS_HOOD_BRAGG_PEF_Journey</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>MHS GENESIS DoD PEFs</value>
    </filters>
    <filters>
        <field>CONTACT.DEPARTMENT</field>
        <operation>notContain</operation>
        <value>,bamc,laughlin,lackland,randolph,goodfellow,corpus christi,ft worth</value>
    </filters>
    <label>MHS GENESIS HOOD/BRAGG PEF Journey</label>
</ListView>