main/default/objects/Contact/listViews/Test_Nicole.listView-meta.xml
<ListView>
    <fullName>Test_Nicole</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>equals</operation>
        <value>Kay De Guzman</value>
    </filters>
    <label>Test Nicole</label>
</ListView>